--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -154,10 +154,13 @@ header {
       color: #fab31a; }
   header video {
     position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    z-index: 1; }
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100; }
 
 .main .main-slogan-wrap {
   /* width: 100%; */
@@ -167,8 +170,11 @@ header {
   padding-top: 88px;
   padding-left: 70px;
   padding-bottom: 92px;
+  padding-right: 137px;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   background-color: rgba(0, 0, 0, 0.6);
-  max-width: 1133px;
+  max-width: 930px;
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -184,9 +190,10 @@ header {
     .main .main-slogan-wrap .main-slogan .main-slogan__middle {
       font-family: "Roboto-Black", sans-serif;
       color: #fab31a; }
+    .main .main-slogan-wrap .main-slogan .main-slogan__bottom--size {
+      font-size: 32px; }
 
 .main .btn {
-  margin-top: 54px;
   background: #21ae78;
   max-width: 392px;
   width: 100%;
@@ -199,53 +206,49 @@ header {
     background: #fab31a; }
 
 .web-app-dev {
-  padding-top: 67px; }
+  padding-top: 67px;
+  padding-bottom: 67px; }
   .web-app-dev .web-app-dev__title {
-    margin-bottom: 51px; }
+    margin-bottom: 10px; }
   .web-app-dev .web-app-dev__item {
     display: inline-block;
     vertical-align: top;
     margin-right: 29px;
     width: 22.8%;
-    height: 250px;
+    height: 260px;
     font: 18px "Roboto-Regular", sans-serif;
     color: #010101;
     text-align: center;
     padding-left: 37px;
-    padding-right: 37px; }
+    padding-right: 37px;
+    text-transform: uppercase; }
     .web-app-dev .web-app-dev__item .web-app-dev__item-img {
-      width: 75px;
-      height: 75px;
+      width: 116px;
+      height: 116px;
       margin-left: auto;
       margin-right: auto;
       background: url(../images/icons_clients.svg?v=5) no-repeat; }
-    .web-app-dev .web-app-dev__item:first-child {
-      background: #4ba5f0; }
-      .web-app-dev .web-app-dev__item:first-child .web-app-dev__item-img {
-        margin: 50px auto; }
-    .web-app-dev .web-app-dev__item:nth-child(2) {
-      background: #21ae78; }
-      .web-app-dev .web-app-dev__item:nth-child(2) .web-app-dev__item-img {
-        margin-top: 41px;
-        margin-bottom: 37px;
-        background-position: -75px; }
-    .web-app-dev .web-app-dev__item:nth-child(3) {
-      background: #b389d7; }
-      .web-app-dev .web-app-dev__item:nth-child(3) .web-app-dev__item-img {
-        margin-top: 40px;
-        margin-bottom: 62px;
-        background-position: -150px; }
+    .web-app-dev .web-app-dev__item:first-child .web-app-dev__item-img {
+      margin: 50px auto 5px; }
+    .web-app-dev .web-app-dev__item:nth-child(2) .web-app-dev__item-img {
+      margin-top: 41px;
+      margin-bottom: 15px;
+      background-position: -116px; }
+    .web-app-dev .web-app-dev__item:nth-child(3) .web-app-dev__item-img {
+      margin-top: 40px;
+      margin-bottom: 15px;
+      background-position: -232px; }
     .web-app-dev .web-app-dev__item:nth-child(4) {
-      margin-right: 0;
-      background: #fab31a; }
+      margin-right: 0; }
       .web-app-dev .web-app-dev__item:nth-child(4) .web-app-dev__item-img {
         margin-top: 42px;
-        margin-bottom: 48px;
-        background-position: -225px; }
+        margin-bottom: 12px;
+        background-position: -349px; }
+
+.development {
+  background: #e9eef0; }
 
 .web-app-dev__plarform {
-  margin-top: 50px;
-  background: #e9eef0;
   min-height: 274px;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
@@ -260,14 +263,14 @@ header {
       width: 15%; }
 
 .get-mob-app {
-  padding-top: 75px;
-  padding-bottom: 55px; }
+  padding-top: 67px;
+  padding-bottom: 67px; }
   .get-mob-app .get-mob-app__title {
     line-height: 40px; }
 
 .advantage-title {
-  margin-top: 87px;
-  margin-bottom: 49px; }
+  margin-top: 67px;
+  margin-bottom: 24px; }
 
 .advantage__items {
   text-align: center;
@@ -280,12 +283,12 @@ header {
     color: #21ae78; }
   .advantage__items .advantage__item .advantage__item--bottom {
     padding: 19px 41px;
-    font: 15px "Roboto-Light", sans-serif; }
+    font: 20px "Roboto-Light", sans-serif; }
 
 .partners .partners-list {
   position: relative;
   border: 2px solid #fab31a;
-  margin-bottom: 74px;
+  margin-bottom: 67px;
   padding-bottom: 34px; }
 
 .partners .partners-list__item {
@@ -379,7 +382,7 @@ header {
       display: table; }
 
 .possibilities-app {
-  margin-top: 50px;
+  margin-top: 67px;
   background: none; }
   .possibilities-app .possibilities-app__title {
     padding-bottom: 45px;
@@ -387,7 +390,7 @@ header {
   .possibilities-app .possibilities-app__items {
     text-align: center;
     width: 100%;
-    padding-bottom: 63px; }
+    padding-bottom: 67px; }
   .possibilities-app .possibilities-app__item {
     position: relative;
     display: inline-block;
@@ -423,7 +426,7 @@ header {
       width: 296px;
       max-width: 100%;
       height: 105px;
-      background: rgba(224, 224, 219, 0.8);
+      background: rgba(255, 255, 255, 0.8);
       text-align: center;
       text-transform: uppercase;
       font: 15px "Roboto-Black", sans-serif; }
@@ -435,7 +438,7 @@ header {
 .block-form {
   background: #242323; }
   .block-form .block-form__title--top {
-    padding-top: 57px;
+    padding-top: 67px;
     padding-bottom: 15px;
     text-transform: uppercase;
     text-align: center;
@@ -456,7 +459,8 @@ header {
     background: #313a3d;
     border: none;
     padding-left: 34px;
-    text-transform: none; }
+    text-transform: none;
+    color: #fff !important; }
   .block-form .block-form__form input[type="text"],
   .block-form .block-form__form input[type="email"] {
     height: 39px;
@@ -493,7 +497,7 @@ header {
 .discussion-ideas {
   background: #1b1b1b; }
   .discussion-ideas .discussion-ideas__title {
-    padding-top: 77px;
+    padding-top: 67px;
     text-transform: uppercase;
     font: 37px "Roboto-Light", sans-serif;
     color: #fab31a;
@@ -501,7 +505,7 @@ header {
     text-align: center;
     padding-bottom: 49px; }
   .discussion-ideas .btn {
-    margin-bottom: 76px;
+    margin-bottom: 67px;
     background: #21ae78;
     width: 100%;
     max-width: 370px;
@@ -590,7 +594,8 @@ header {
     color: #323232;
     text-align: left;
     font: 16px "Roboto-Light", sans-serif;
-    margin-bottom: 21px; }
+    margin-bottom: 21px;
+    width: 50%; }
   .free-consultation .free-consultation__item .free-consultation__item--btn,
   .free-consultation .free-consultation__item .free-consultation__item--response {
     display: inline-block; }
@@ -624,94 +629,20 @@ header {
   height: 27px; }
 
 /*
-    * Animate
-*/
-.animated {
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both; }
-
-.animated.infinite {
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite; }
-
-.fast {
-  -vendor-animation-duration: 1s;
-  -vendor-animation-delay: 0s; }
-
-@-webkit-keyframes pulse {
-  from {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1); }
-  50% {
-    -webkit-transform: scale3d(1.2, 1.2, 1.2);
-    transform: scale3d(1.2, 1.2, 1.2); }
-  to {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1); } }
-
-@keyframes pulse {
-  from {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1); }
-  50% {
-    -webkit-transform: scale3d(1.08, 1.08, 1.08);
-    transform: scale3d(1.08, 1.08, 1.08); }
-  to {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1); } }
-
-.pulse {
-  -webkit-animation-name: pulse;
-  animation-name: pulse; }
-
-/*
     * slider-1
 */
-.slider-laptop .slider-1 {
-  margin: 0 auto;
-  max-width: 922px;
-  width: 100%;
-  max-height: 425px;
-  overflow: hidden;
-  margin-top: 26px;
-  border: none; }
-  .slider-laptop .slider-1 li {
-    overflow: hidden !important; }
-  .slider-laptop .slider-1 img {
-    max-width: 100%;
-    padding: 0% 13% 0;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box; }
-  .slider-laptop .slider-1 .warning {
-    color: #f57b2e;
-    text-transform: uppercase; }
-  .slider-laptop .slider-1 .flex-caption {
-    width: 96%;
-    padding: 5% 19%;
-    left: 0;
-    color: #fff;
-    font-size: 14px;
-    z-index: 1;
-    top: -29px;
-    position: absolute;
-    text-align: left;
-    font-size: 18px; }
-  .slider-laptop .slider-1 .flex-caption--mod {
-    padding-left: 23%; }
+.main-slogan-wrap .flex-control-paging li a.flex-active {
+  cursor: default;
+  background: orange; }
 
-.slider-laptop .slider-1 .flex-prev {
-  background: url(../images/arrows.png) 0 0 no-repeat;
-  width: 21px;
-  height: 42px;
-  left: 12.5%; }
+.main-slogan-wrap .flex-control-paging li a {
+  background: #B8B8B8; }
 
-.slider-laptop .slider-1 .flex-next {
-  background: url(../images/arrows.png) -22px 0 no-repeat;
-  width: 21px;
-  height: 42px;
-  right: 12.5%; }
+.main-slogan-wrap .flex-control-nav {
+  text-align: right;
+  bottom: -100%;
+  right: 15%;
+  font-size: 0; }
 
 /*
     * slider 2
@@ -786,7 +717,13 @@ header {
     top: 12%; }
   .main .main-slogan-wrap {
     background: none;
-    top: 50%; }
+    top: 50%;
+    padding-right: 0; }
+  .main .flex-control-nav {
+    text-align: left;
+    bottom: -12%;
+    left: 0%;
+    font-size: 0; }
   .web-app-dev .web-app-dev__item {
     margin-right: 23px; }
   .block-form .block-form__form input[type="text"], .block-form .block-form__form input[type="email"], .block-form .block-form__form textarea {
@@ -845,17 +782,27 @@ header {
       .main-nav .main-nav__items .main-nav__item a:hover {
         background: none;
         color: #21ae78; }
-  .possibilities-app .possibilities-app__item img {
-    max-width: 340px; }
-  .possibilities-app .possibilities-app__title {
-    color: #000; }
+  .free-consultation .free-consultation__txt--descr {
+    width: 100%; }
+  .possibilities-app {
+    background: url(../images/preview-picture.jpg) no-repeat;
+    background-position: center center;
+    height: auto;
+    background-size: cover;
+    margin-top: 0;
+    padding-top: 67px; }
+    .possibilities-app .possibilities-app__item img {
+      max-width: 340px; }
+    .possibilities-app .possibilities-app__title {
+      color: #fff; }
   .block-form__form {
     padding: 20px; }
   .block-form .block-form__title--top {
     font-size: 28px; }
   .get-mob-app .slider2__item--txt {
     text-transform: uppercase;
-    padding-left: 2px; }
+    padding-left: 2px;
+    padding-top: 0; }
   header video {
     display: none; }
   .picture-bg {
@@ -874,20 +821,9 @@ header {
   .advantage__item--bottom {
     text-transform: uppercase; }
   .web-app-dev .web-app-dev__item {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center; }
-    .web-app-dev .web-app-dev__item .web-app-dev__item-img {
-      display: none; }
+    width: 100%;
+    display: block;
+    height: auto; }
   .web-app-dev .web-app-dev__plarform {
     margin-top: 0;
     padding-bottom: 50px; }
@@ -904,7 +840,12 @@ header {
         padding-bottom: 10px; }
   .free-consultation {
     background-size: cover;
-    padding-left: 10px; } }
+    padding-left: 10px; }
+  .footer {
+    background: url(../images/preview-picture.jpg) no-repeat;
+    background-position: center center;
+    height: auto;
+    background-size: cover; } }
 
 @media (max-width: 767px) {
   .main .header .header-container {
@@ -923,14 +864,42 @@ header {
 @media (max-width: 550px) {
   .title {
     font-size: 28px; }
-  .main-slogan__top, .main-slogan__middle {
-    font-size: 28px; }
+  .get-mob-app {
+    margin-top: 0px; }
+  .web-app-dev .web-app-dev__title {
+    margin-bottom: 30px; }
+  .web-app-dev .web-app-dev__item:last-child {
+    margin-bottom: 0; }
   .web-app-dev .web-app-dev__item {
-    width: 100%; } }
+    width: 100%;
+    display: block;
+    height: auto;
+    margin-bottom: 30px; }
+  .web-app-dev .web-app-dev__item-img {
+    display: none; }
+  .main-slogan-wrap .flex-control-nav {
+    text-align: left;
+    bottom: -6%;
+    left: 0%;
+    font-size: 0; }
+  .flexslider.slider-1 {
+    margin-bottom: 30px; } }
 
 @media (max-width: 500px) {
-  .main-slogan__top, .main-slogan__middle, .main-slogan__bottom {
-    text-align: center; }
+  .main .btn {
+    display: inline-block;
+    padding: 11px 0;
+    max-width: 260px;
+    line-height: 21px;
+    height: 63px; }
+  .web-app-dev__plarform {
+    padding-bottom: 70px; }
+  .main-slogan__top, .main-slogan__middle, .main-slogan__bottom,
+  .main-slogan__bottom.main-slogan__bottom--size {
+    text-align: left;
+    font-size: 20px !important; }
+  .get-mob-app .slider-2 {
+    padding-bottom: 25px; }
   .partners-list__item img {
     display: block;
     max-width: 100%;
@@ -945,38 +914,24 @@ header {
     height: 75px;
     font: 10px "Roboto-Black", sans-serif; }
   .possibilities-app .possibilities-app__item img {
-    max-width: 156px; } }
-
-@media (max-width: 462px) {
-  .main .btn {
-    display: inline-block;
-    padding: 11px 0;
-    max-width: 260px;
-    line-height: 21px;
-    height: 63px; }
-  .get-mob-app {
-    margin-top: 40px; }
-  .web-app-dev__plarform {
-    padding-bottom: 70px; } }
-
-@media (max-width: 410px) {
+    max-width: 156px; }
+  .send-msg .send-msg__item .send-msg__item--txt {
+    text-transform: none;
+    text-align: left;
+    font-size: 15px; }
   .free-consultation {
     background-size: cover;
     padding-left: 0px;
     height: auto;
     padding: 20px; }
     .free-consultation input[type="text"], .free-consultation input[type="email"], .free-consultation textarea {
-      width: 100%; } }
-
-@media (max-width: 398px) {
-  .free-consultation .free-consultation__item .free-consultation__item--response {
-    margin-left: 0px;
-    margin-top: 10px; } }
-
-@media (max-width: 350px) {
+      width: 100%; }
+    .free-consultation .free-consultation__item .free-consultation__item--response {
+      margin-left: 0px;
+      margin-top: 10px; }
   .discussion-ideas .btn {
     display: inline-block;
     max-width: 350px;
-    height: 66px;
+    height: auto;
     padding: 11px 0;
     line-height: 25px; } }
