--- a/app/sass/_lending.scss
+++ b/app/sass/_lending.scss
@@ -45,7 +45,7 @@ a[href^="tel:"], a[href^="mailto:"] {
     position: fixed;
     top: 69%;
     right: 7%;
-    z-index: 1;
+    z-index: 17;
 }
 
 .text-center {
@@ -483,15 +483,18 @@ header {
             width: 296px;
             max-width: 100%;
             height: 105px;
-            background: rgba(255, 255, 255, 0.8);
             text-align: center;
             text-transform: uppercase;
+            background: rgba(255, 255, 255, 0.8);
             font: 15px $fnt_rb;
         }
         .possibilities-app__item--img img:hover {
             z-index: 1;
             opacity: 0.7;
             background-color: rgba(0, 0, 0, 0.8);
+        }
+        .possibilities-app__item--img:hover .possibilities-app__item--txt {
+            background: #fff;
         }
     }
 }
