--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -233,11 +233,12 @@ header {
     .web-app-dev .web-app-dev__item:nth-child(2) .web-app-dev__item-img {
       margin-top: 41px;
       margin-bottom: 15px;
-      background-position: -116px; }
+      background-position: -117px; }
     .web-app-dev .web-app-dev__item:nth-child(3) .web-app-dev__item-img {
       margin-top: 40px;
       margin-bottom: 15px;
-      background-position: -232px; }
+      background-position: -232px;
+      width: 115px; }
     .web-app-dev .web-app-dev__item:nth-child(4) {
       margin-right: 0; }
       .web-app-dev .web-app-dev__item:nth-child(4) .web-app-dev__item-img {
@@ -274,7 +275,7 @@ header {
 
 .advantage__items {
   text-align: center;
-  margin-bottom: 5px; }
+  margin-bottom: 60px; }
   .advantage__items .advantage__item .advantage__item--top {
     font: 120px "Roboto-Light", sans-serif;
     color: #21ae78; }
@@ -485,6 +486,21 @@ header {
     font-family: "Roboto-Black", sans-serif; }
     .block-form .btn:hover {
       background: #fab31a; }
+
+.video-1c .title {
+  padding-top: 60px;
+  padding-bottom: 60px; }
+
+.video-1c .btn {
+  background: #21ae78;
+  margin-top: 40px;
+  font-family: "Roboto-Black", sans-serif;
+  max-width: 420px;
+  width: 100%;
+  height: 50px;
+  line-height: 50px; }
+  .video-1c .btn:hover {
+    background: #fab31a; }
 
 .support_month {
   text-align: center;
